--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
      
         <title>Oblig1</title>   
-        <script src="/JS/oblig1_1.js"></script>
-        <link rel="stylesheet" href="/CSS/oblig1_1.css">
+        <script src="JS/oblig1_1.js"></script>
+        <link rel="stylesheet" href="CSS/oblig1_1.css">
     </head>
     <body>
         <!--Body start-->
