--- a/posts.html
+++ b/posts.html
@@ -8,13 +8,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
      
         <title>Oblig1</title>   
-        <script src="/JS/oblig1_1.js"></script>
+        <script src="JS/oblig1_1.js"></script>
 
         <!--Initializes dynamic js code on page-->
         <script>
             window.onload = function(){posts();};
         </script>
-        <link rel="stylesheet" href="/CSS/oblig1_1.css">
+        <link rel="stylesheet" href="CSS/oblig1_1.css">
     </head>
     <body>
         <!--Body start-->
